added variables to bruno
